# fcitx-cloudpinyin

./: .gitignore  CMakeLists.txt  README  config.h.in  fcitx-cloudpinyin.kdev4
cmake/: FindLibintl.cmake
po/: CMakeLists.txt  POTFILES.in.in  ca.po  da.po  de.po  fcitx-cloudpinyin.pot  ja.po  ko.po  ru.po  tr.po  zh_CN.po  zh_TW.po
src/: CMakeLists.txt  cloudpinyin.c  cloudpinyin.h  cloudpinyinconifg.c  fcitx-cloudpinyin.conf.in  fcitx-cloudpinyin.desc  fetch.c  fetch.h  parse.c  parse.h
test/: CMakeLists.txt  testhalf.c
